--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Page index.html</title>
-    <link rel="stylesheet" type="text/css" href="CSSforporsche.css">
+    <link>
   </head>
   <body style="background: gray">
     <table style="width:100%" border="2" >
